--- a/Trainee/Apresentação 2 - Meu grupo/Datetime e strings.ipynb
+++ b/Trainee/Apresentação 2 - Meu grupo/Datetime e strings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,15 +134,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-20 19:17:28.765748 \n",
-      " 2024-05-30 19:17:28.765748\n"
+      "2024-06-04 13:42:07.467089 \n",
+      " 2024-06-14 13:42:07.467089\n"
      ]
     }
    ],
@@ -157,15 +157,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-20 19:17:28.780110\n",
-      "2024-05-15 19:17:28.780110\n"
+      "2024-06-04 13:42:07.482090\n",
+      "2024-05-30 13:42:07.482090\n"
      ]
     }
    ],
@@ -180,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Diferença: 142 days, 4:42:31.201090\n"
+      "Diferença: 127 days, 10:17:52.500909\n"
      ]
     }
    ],
@@ -230,14 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data formatada: 2024-05-20 19:26:18\n",
+      "Data formatada: 2024-06-04 13:42:07\n",
       "<class 'str'>\n"
      ]
     }
@@ -254,14 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Apenas a data: 20/05/2024\n"
+      "Apenas a data: 04/06/2024\n"
      ]
     }
    ],
@@ -276,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dia e mês: Monday, May 20, 2024\n"
+      "Dia e mês: Tuesday, June 04, 2024\n"
      ]
     }
    ],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -413,14 +413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon May 20 19:45:27 2024\n"
+      "Tue Jun  4 13:42:07 2024\n"
      ]
     }
    ],
@@ -439,12 +439,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "05:30:00 2003-05-03\n",
+      "2003 5 3\n"
+     ]
+    }
+   ],
    "source": [
-    "hora = datetime.time(10,23,15)\n",
-    "print(hora)"
+    "hora = datetime.time(pd.Timestamp('05/03/2003 05:30'))\n",
+    "dia = datetime.date(pd.Timestamp('05/03/2003 05:30'))\n",
+    "print(hora, dia)\n",
+    "\n",
+    "print(dia.year, dia.month, dia.day)"
    ]
   },
   {
@@ -456,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
